Agregando pagina para crear nueva cuenta

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>¡Bienvenido de vuelta!</ion-title>
+    <h3>Ingresa con tu usuario y contraseña:</h3>
   </ion-toolbar>
 </ion-header>
 
