--- a/src/app/new-account/new-account.page.html
+++ b/src/app/new-account/new-account.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>newAccount</ion-title>
+    <ion-title>¡Registrate!</ion-title>
   </ion-toolbar>
 </ion-header>
 
