--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,10 +1,19 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>¡Bienvenido de vuelta!</ion-title>
-    <h3>Ingresa con tu usuario y contraseña:</h3>
+    <ion-title>login</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <h1>¡Bienvenido de vuelta!</h1>
+  <br>
+  <h3>Ingresa con tu usuario y contraseña:</h3>
+  <br>  
+  <ion-input placeholder="Usuario" type="email"></ion-input>
+  <ion-input placeholder="Contraseña" type="password"></ion-input>
+  <br>
+  <ion-button>
+    <ion-icon name="help-circle-outline"></ion-icon>
 
+  </ion-button>
 </ion-content>
