Cambiando Titulo de la aplicacion

--- a/src/app/new-account/new-account.page.html
+++ b/src/app/new-account/new-account.page.html
@@ -5,5 +5,22 @@
 </ion-header>
 
 <ion-content>
+  
+  <ion-label>¡Registrate!</ion-label>
+  <ion-item>
+    <ion-label>¿Que tipo de usuario es?</ion-label>
+  <ion-select>
+    <ion-select-option>Persona Natural</ion-select-option>
+    <ion-select-option>Domiciliario</ion-select-option>
+    <ion-select-option>Empresa</ion-select-option>
+  </ion-select>
+
+
+
+
+  </ion-item>
+
+
+
 
 </ion-content>
