--- a/src/app/new-account/new-account.page.html
+++ b/src/app/new-account/new-account.page.html
@@ -1,24 +1,32 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar style="text-align: center;">
     <ion-title>¡Registrate!</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  
-  <ion-label>¡Registrate!</ion-label>
-  <ion-item>
-    <ion-label>¿Que tipo de usuario es?</ion-label>
-  <ion-select>
-    <ion-select-option>Persona Natural</ion-select-option>
-    <ion-select-option>Domiciliario</ion-select-option>
-    <ion-select-option>Empresa</ion-select-option>
-  </ion-select>
+  <ion-card>
+
+    <ion-card-content>
+      <ion-select  ok-text="Aceptar" placeholder="Elija su tipo de usuario" cancel-text="Cancelar" >
+        <ion-select-option >Persona Natural</ion-select-option>
+        <ion-select-option>Domiciliario</ion-select-option>
+        <ion-select-option>Empresa</ion-select-option>
+      </ion-select>
+
+      <ion-item style="text-align: left;">
+
+        <ion-button href="https://www.w3schools.com/html/html_basic.asp">
+          <ion-icon name="help-circle-outline"></ion-icon> 
+          ¿Como saber qué tipo de usuario soy?
+        </ion-button>
+
+      </ion-item>
+    </ion-card-content>
+
+</ion-card>
 
 
-
-
-  </ion-item>
 
 
 
