Añadidas cosas del login
xd

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -5,15 +5,24 @@
 </ion-header>
 
 <ion-content>
-  <h1>¡Bienvenido de vuelta!</h1>
-  <br>
-  <h3>Ingresa con tu usuario y contraseña:</h3>
-  <br>  
-  <ion-input placeholder="Usuario" type="email"></ion-input>
-  <ion-input placeholder="Contraseña" type="password"></ion-input>
+  <div id="Titulos">
+    <h1>¡Bienvenido de vuelta!</h1>
+    <br>
+    <h3>Ingresa con tu usuario y contraseña:</h3>
+  </div>
+  <br> 
+  <div id="inputs"> 
+    <ion-input placeholder="Usuario" type="email"></ion-input>
+    <ion-input placeholder="Contraseña" type="password"></ion-input>
+  </div>
   <br>
   <ion-button>
-    <ion-icon name="help-circle-outline"></ion-icon>
-
+    <ion-icon slot="start" name="help-circle-outline"></ion-icon>
+    <p>Olvidé mi contraseña</p>
   </ion-button>
+  <br>
+  <ion-checkbox></ion-checkbox>
+  <ion-label>Recuérdame</ion-label>
+  <br>
+  <ion-button id="btn-entrar">Ingresar</ion-button>
 </ion-content>
