--- a/src/app/new-account/new-account.page.html
+++ b/src/app/new-account/new-account.page.html
@@ -1,28 +1,62 @@
-<ion-header>
-  <ion-toolbar style="text-align: center;">
-    <ion-title>¡Registrate!</ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content>
   <ion-card>
 
     <ion-card-content>
-      <ion-select  ok-text="Aceptar" placeholder="Elija su tipo de usuario" cancel-text="Cancelar" >
+      <ion-label>Elija su tipo de usuario</ion-label>
+
+      <ion-select  ok-text="Aceptar" placeholder="Persona Natural" cancel-text="Cancelar" value="Persona Natural" >
         <ion-select-option >Persona Natural</ion-select-option>
         <ion-select-option>Domiciliario</ion-select-option>
         <ion-select-option>Empresa</ion-select-option>
       </ion-select>
 
-      <ion-item style="text-align: left;">
-
-        <ion-button href="https://www.w3schools.com/html/html_basic.asp">
-          <ion-icon name="help-circle-outline"></ion-icon> 
-          ¿Como saber qué tipo de usuario soy?
-        </ion-button>
-
-      </ion-item>
     </ion-card-content>
+
+    <ion-card-content>
+
+      <ion-item>
+        <ion-item><ion-input>Nombres</ion-input></ion-item>
+        <ion-item><ion-input>Apellidos</ion-input></ion-item>
+      </ion-item> 
+
+      <ion-item>
+        <ion-input>Correo electronico</ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-input>Contraseña</ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-item><ion-input>Ciudad</ion-input></ion-item>
+        <ion-item><ion-input>Telefono</ion-input></ion-item>
+      </ion-item>
+
+      <ion-item>  
+        <ion-input>Nombre de la empresa</ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-input>Correo empresarial</ion-input>
+      </ion-item>
+
+      <ion-button href="https://www.w3schools.com/html/html_basic.asp">
+        <ion-icon name="help-circle-outline"></ion-icon> 
+        ¿Como saber qué tipo de usuario soy?
+      </ion-button>
+      
+      
+
+    </ion-card-content>
+
+
+
+</ion-card>
+
+<ion-card>
+
+
 
 </ion-card>
 
