Interfaz del login terminada
AAAAAAAAAAAAAAAAAAAAAAAAAAA

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -14,7 +14,7 @@
      </div>
      <br> 
      <div id="inputs"> 
-       <ion-input placeholder="Usuario" type="email"></ion-input>
+       <ion-input placeholder="Usuario" type="email" ></ion-input>
        <ion-input placeholder="Contraseña" type="password"></ion-input>
      </div>
      <br>
@@ -30,7 +30,7 @@
       <br>
       <br>
       <br>
-      <p>¿No tienes una cuenta? <a style="text-decoration: underline;">crea una</a>.</p>
+      <p>¿No tienes una cuenta? <a style="text-decoration: underline;" href="./new-account">crea una</a>.</p>
     </ion-card-content>
   </ion-card>
 </ion-content>
