--- a/src/app/new-account/new-account.page.html
+++ b/src/app/new-account/new-account.page.html
@@ -15,36 +15,32 @@
 
     <ion-card-content>
 
-      <ion-item>
-        <ion-item><ion-input>Nombres</ion-input></ion-item>
-        <ion-item><ion-input>Apellidos</ion-input></ion-item>
-      </ion-item> 
-
-      <ion-item>
-        <ion-input>Correo electronico</ion-input>
-      </ion-item>
-
-      <ion-item>
-        <ion-input>Contraseña</ion-input>
-      </ion-item>
-
-      <ion-item>
-        <ion-item><ion-input>Ciudad</ion-input></ion-item>
-        <ion-item><ion-input>Telefono</ion-input></ion-item>
-      </ion-item>
-
-      <ion-item>  
-        <ion-input>Nombre de la empresa</ion-input>
-      </ion-item>
-
-      <ion-item>
-        <ion-input>Correo empresarial</ion-input>
-      </ion-item>
-
-      <ion-button href="https://www.w3schools.com/html/html_basic.asp">
-        <ion-icon name="help-circle-outline"></ion-icon> 
-        ¿Como saber qué tipo de usuario soy?
-      </ion-button>
+          <div>
+            <ion-grid>
+              <ion-row >
+                <ion-col><ion-input>Nombres</ion-input></ion-col>
+                <ion-col><ion-input>Apellidos</ion-input></ion-col>
+              </ion-row>
+          
+              <ion-row><ion-input>Correo electronico</ion-input></ion-row>
+              
+              <ion-row><ion-input>Contraseña</ion-input></ion-row>
+          
+              <ion-row>
+                <ion-col><ion-input>Ciudad</ion-input></ion-col>
+                <ion-col><ion-input>Telefono</ion-input></ion-col>
+              </ion-row>
+          
+              <ion-row><ion-input>Nombre de la empresa</ion-input></ion-row>
+              <ion-row><ion-input>Correo empresarial</ion-input></ion-row>
+          
+            </ion-grid>
+          
+            <ion-button>Registrarse</ion-button>
+            <br>
+            <br>
+            <ion-button href="https://www.w3schools.com/html/html_basic.asp">¿Como saber qué tipo de usuario soy?</ion-button>
+          </div>
       
       
 
@@ -53,14 +49,6 @@
 
 
 </ion-card>
-
-<ion-card>
-
-
-
-</ion-card>
-
-
 
 
 
