--- a/src/app/new-account/new-account.page.html
+++ b/src/app/new-account/new-account.page.html
@@ -1,45 +1,48 @@
 
 <ion-content>
   <ion-card>
-
+    <ion-card-title>Porfavor Rellene el formulario</ion-card-title>
     <ion-card-content>
-      <ion-label>Elija su tipo de usuario</ion-label>
-
-      <ion-select  ok-text="Aceptar" placeholder="Persona Natural" cancel-text="Cancelar" value="Persona Natural" >
+      <div id="recorte">
+      <ion-select  ok-text="Aceptar" placeholder="Elija su tipo de usuario" cancel-text="Cancelar" value="Persona Natural" >
         <ion-select-option >Persona Natural</ion-select-option>
         <ion-select-option>Domiciliario</ion-select-option>
         <ion-select-option>Empresa</ion-select-option>
       </ion-select>
+
+      </div>
+      
 
     </ion-card-content>
 
     <ion-card-content>
 
           <div>
-            <ion-grid>
+            <ion-grid class="formulario">
               <ion-row >
                 <ion-col><ion-input>Nombres</ion-input></ion-col>
                 <ion-col><ion-input>Apellidos</ion-input></ion-col>
               </ion-row>
-          
-              <ion-row><ion-input>Correo electronico</ion-input></ion-row>
               
-              <ion-row><ion-input>Contraseña</ion-input></ion-row>
+          
+              <ion-row><ion-col><ion-input>Correo electronico</ion-input></ion-col></ion-row>
+              
+              <ion-row><ion-col><ion-input>Contraseña</ion-input></ion-col></ion-row>
           
               <ion-row>
                 <ion-col><ion-input>Ciudad</ion-input></ion-col>
                 <ion-col><ion-input>Telefono</ion-input></ion-col>
               </ion-row>
           
-              <ion-row><ion-input>Nombre de la empresa</ion-input></ion-row>
-              <ion-row><ion-input>Correo empresarial</ion-input></ion-row>
+              <ion-row><ion-col><ion-input>Nombre de la empresa</ion-input></ion-col></ion-row>
+              <ion-row><ion-col><ion-input>Correo empresarial</ion-input></ion-col></ion-row>
           
             </ion-grid>
           
             <ion-button>Registrarse</ion-button>
             <br>
             <br>
-            <ion-button href="https://www.w3schools.com/html/html_basic.asp">¿Como saber qué tipo de usuario soy?</ion-button>
+            <ion-button href="https://www.w3schools.com/html/html_basic.asp" id="btnhelp">¿Como saber qué tipo de usuario soy?</ion-button>
           </div>
       
       
