--- a/src/app/new-account/new-account.page.html
+++ b/src/app/new-account/new-account.page.html
@@ -1,21 +1,26 @@
 
 <ion-content>
   <ion-card>
-    <ion-card-title>Porfavor Rellene el formulario</ion-card-title>
+    
     <ion-card-content>
-      <div id="recorte">
-      <ion-select  ok-text="Aceptar" placeholder="Elija su tipo de usuario" cancel-text="Cancelar" value="Persona Natural" >
-        <ion-select-option >Persona Natural</ion-select-option>
-        <ion-select-option>Domiciliario</ion-select-option>
-        <ion-select-option>Empresa</ion-select-option>
-      </ion-select>
-
-      </div>
+      
       
 
     </ion-card-content>
 
     <ion-card-content>
+
+      <ion-card-title>Porfavor Rellene el formulario</ion-card-title>
+      <br>
+      <div id="recorte">
+        <ion-select  ok-text="Aceptar" placeholder="Elija su tipo de usuario" cancel-text="Cancelar" value="Persona Natural" >
+          <ion-select-option >Persona Natural</ion-select-option>
+          <ion-select-option>Domiciliario</ion-select-option>
+          <ion-select-option>Empresa</ion-select-option>
+        </ion-select>
+  
+        </div>
+
 
           <div>
             <ion-grid class="formulario">
@@ -36,13 +41,16 @@
           
               <ion-row><ion-col><ion-input>Nombre de la empresa</ion-input></ion-col></ion-row>
               <ion-row><ion-col><ion-input>Correo empresarial</ion-input></ion-col></ion-row>
+
+              <ion-button>Registrarse</ion-button>
+              <br>
+              <br>
+              <ion-button id="btnhelp" href="https://www.w3schools.com/html/html_basic.asp" >¿Como saber qué tipo de usuario soy?</ion-button>
           
             </ion-grid>
           
-            <ion-button>Registrarse</ion-button>
-            <br>
-            <br>
-            <ion-button href="https://www.w3schools.com/html/html_basic.asp" id="btnhelp">¿Como saber qué tipo de usuario soy?</ion-button>
+            
+          
           </div>
       
       
