Ion-select integrado
Se integro un ion-select dentro de la estructura de grillas (ion-grid)

--- a/src/app/new-account/new-account.page.html
+++ b/src/app/new-account/new-account.page.html
@@ -10,20 +10,27 @@
 
     <ion-card-content>
 
-      <ion-card-title>Porfavor Rellene el formulario</ion-card-title>
-      <br>
-      <div id="recorte">
-        <ion-select  ok-text="Aceptar" placeholder="Elija su tipo de usuario" cancel-text="Cancelar" value="Persona Natural" >
-          <ion-select-option >Persona Natural</ion-select-option>
-          <ion-select-option>Domiciliario</ion-select-option>
-          <ion-select-option>Empresa</ion-select-option>
-        </ion-select>
   
         </div>
 
-
           <div>
             <ion-grid class="formulario">
+
+              <ion-row>
+                      <ion-col>
+                        <ion-card-title>Porfavor Rellene el formulario</ion-card-title>
+                        <br>
+                        <div id="recorte">
+                            <ion-select  ok-text="Aceptar" placeholder="Elija su tipo de usuario" cancel-text="Cancelar" value="Persona Natural" >
+                            <ion-select-option >Persona Natural</ion-select-option>
+                            <ion-select-option>Domiciliario</ion-select-option>
+                            <ion-select-option>Empresa</ion-select-option>
+                        </ion-select>
+                      </ion-col>
+              </ion-row>
+
+
+
               <ion-row >
                 <ion-col><ion-input>Nombres</ion-input></ion-col>
                 <ion-col><ion-input>Apellidos</ion-input></ion-col>
