Pagina de información terminado con estado basico

--- a/src/app/information/information.page.html
+++ b/src/app/information/information.page.html
@@ -7,9 +7,35 @@
 <ion-content>
 
   <ion-card>
-    <ion-card-header></ion-card-header>
+    <ion-card-title>¿Qué tipo de usuario soy?</ion-card-title>
     <ion-card-content>
-
+      <ion-item>
+      <ion-text>Lorem ipsum dolor sit amet, consectetur
+        adipiscing elit. Vestibulum sed urna arcu.
+        Maecenas purus mauris, tristique vitae velit
+        ac, semper finibus sapien. Sed vitae dolor a
+        velit volutpat consectetur vitae ut lacus.
+        Vivamus euismod feugiat orci et placerat.
+        Integer in varius felis. Vivamus molestie
+        porttitor lorem, ac euismod risus luctus
+        bibendum. Nullam dui ligula, tincidunt quis
+        eros a, consequat ultrices nisl.
+        Sed leo ante, consequat eget posuere sit
+        amet, rutrum non lacus. Praesent euismod dui
+        nec sagittis auctor. Vivamus in nibh et justo
+        mollis tincidunt. Cras aliquet odio ipsum, quis
+        iaculis sem elementum at. Vestibulum ante
+        ipsum primis in faucibus orci luctus et ultrices
+        posuere cubilia curae; Orci varius natoque
+        penatibus et magnis dis parturient montes,
+        nascetur ridiculus mus. Nam iaculis lacinia
+        nisi. Quisque imperdiet orci in purus luctus,
+        vitae efficitur enim luctus.
+        Orci varius natoque penatibus et magnis dis
+        parturient montes, nascetur ridiculus mus.</ion-text>
+      </ion-item>
     </ion-card-content>
+    <ion-button href="./new-account">Volver</ion-button>
   </ion-card>
+
 </ion-content>
