--- a/src/app/new-account/new-account.page.html
+++ b/src/app/new-account/new-account.page.html
@@ -79,10 +79,10 @@
             </ion-col>
           </ion-row>
 
-          <ion-button>Registrarse</ion-button>
+          <ion-button href="">Registrarse</ion-button>
           <br>
           <br>
-          <ion-button id="btnhelp" href="https://www.w3schools.com/html/html_basic.asp">¿Como saber qué tipo de usuario
+          <ion-button id="btnhelp" href="./information">¿Como saber qué tipo de usuario
             soy?</ion-button>
 
         </ion-grid>
