Se cambio la manera de enrrutar paginas
Se cambio el enrrutamiento de la pagina new-account y information
#Formato usado en el atributo del boton fue : [ routerLink]="[ /pagina_a_enrutar ]"

--- a/src/app/information/information.page.html
+++ b/src/app/information/information.page.html
@@ -35,7 +35,7 @@
         parturient montes, nascetur ridiculus mus.</ion-text>
       </ion-item>
     </ion-card-content>
-    <ion-button href="./new-account">Volver</ion-button>
+    <ion-button [routerLink]="['/new-account']">Volver</ion-button>
   </ion-card>
 
 </ion-content>
