--- a/src/app/new-account/new-account.page.html
+++ b/src/app/new-account/new-account.page.html
@@ -4,7 +4,6 @@
     <ion-card-content>
 
 
-
     </ion-card-content>
 
     <ion-card-content>
@@ -82,7 +81,7 @@
           <ion-button href="">Registrarse</ion-button>
           <br>
           <br>
-          <ion-button id="btnhelp" href="./information">¿Como saber qué tipo de usuario
+          <ion-button id="btnhelp" [routerLink]="['/information']">¿Como saber qué tipo de usuario
             soy?</ion-button>
 
         </ion-grid>
