Enrutamientos de login a register y viceversa
AAAAAAAAAAAAAAAAAAAAAAA

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -30,7 +30,7 @@
       <br>
       <br>
       <br>
-      <p>¿No tienes una cuenta? <a style="text-decoration: underline;" href="./new-account">crea una</a>.</p>
+      <p>¿No tienes una cuenta? <a style="text-decoration: underline;" [routerLink]="['/new-account']">crea una</a>.</p>
     </ion-card-content>
   </ion-card>
 </ion-content>
