--- a/src/app/new-account/new-account.page.html
+++ b/src/app/new-account/new-account.page.html
@@ -78,7 +78,7 @@
             </ion-col>
           </ion-row>
 
-          <ion-button href="">Registrarse</ion-button>
+          <ion-button [routerLink]="['/login']">Registrarse</ion-button>
           <br>
           <br>
           <ion-button id="btnhelp" [routerLink]="['/information']">¿Como saber qué tipo de usuario
